[package]
name = "serverlist"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["http2", "macros"] }
axum-client-ip = "0.5.1"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["add-extension", "cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
